# AI-SOW-Generator

./: Documentation.md  README.md  ToDo.md  package.json
backend/: .env  .gitignore  ai.py  app.py  config.py  db.py  infograph.py  jwt_utils.py  models.py  pyproject.toml  requirements.txt  save_image.py
backend/services/: AI.py  ai_service.py  ppt_service.py
convex/: auth.ts  schema.ts  sows.ts
convex/_generated/: api.d.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/convex/functions/: App.tsx  main.tsx  schema.ts
frontend/src/: App.tsx  frontend.tsx  index.css  index.html  main.tsx
frontend/src/components/: BackToGeneratorButton.tsx  Canvas.tsx  Layout.tsx  Logo.tsx  LogoutButton.tsx  SOWListButton.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/components/Charts/: ChartRenderer.tsx
frontend/src/components/Editor/: Canvas.tsx
frontend/src/components/Generator/: ErrorBoundary.tsx  OptionalFieldsSelector.tsx  RequiredFieldsForm.tsx
frontend/src/components/Viewer/: DownloadPDFButton.tsx  DownloadPPTXButton.tsx  SOWDateSection.tsx  index.ts  (+4 more)
frontend/src/contexts/: ThemeContext.tsx
frontend/src/convex/: client.ts
frontend/src/hooks/: useTemplate.ts
frontend/src/lib/: api.ts  useAuth.ts
frontend/src/pages/: GeneratePPTPage.tsx  GenerateSOWPage.tsx  LoginPage.tsx  PPTEditor.tsx  PresentationViewer.tsx  SOWList.tsx  SOWViewer.tsx
frontend/src/types/: page.ts  presentation.ts  template.ts
frontend/src/utils/: contentSplitter.ts  sowMeta.ts
frontend/styles/: globals.css
(+4 files in other folders)
