[project]
name = "AI-SOW-Generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "boto3>=1.39.3",
    "click>=8.2.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.26",
    "langchain-aws>=0.2.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "markupsafe>=3.0.2",
    "pyjwt>=2.10.1",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "werkzeug>=3.1.3",
]
